loopdowhile.Poucet2.scala.code
var fin = false
while (fin == false){
  var nbBiscuit+=1
  do {
    avance()
  }while (crossing() == false) {
    avance()
    if (estSurBiscuit == true) {
      nbBiscuit+=1
    }
  }if (sortieTrouvee() == true) {
    fin = true
    if (nbBiscuit >= 3) {
      gauche
    }else {
      droite()
    }
  }else {
    if (nbBiscuit >=3) {
      gauche()
    }else {
      droite()
    }
  }
}
avance()